refactor: Update File to String conversion in JsonVariableStorageManagerTest